fixed scrollbar

--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ body {
   font-family: 'Courier New', Courier, monospace;
   text-shadow: 0px 0px 2px var(--secondary);
   overflow: auto;
-  padding: 10px;
+  padding: 5px;
   white-space: pre-wrap;
   border: 3px outset #ececec;
   outline: none;
